// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlowMenu Component should connect to state 1`] = `
<div
  className="flow-menu"
>
  <div
    className="menu-group"
  >
    <div
      className="menu-content"
    >
      <button
        className="btn btn-default"
        onClick={[Function]}
        title="[r]eplay flow"
      >
        <i
          className="fa fa-fw fa-repeat text-primary"
        />
        Replay
      </button>
      <button
        className="btn btn-default"
        onClick={[Function]}
        title="[D]uplicate flow"
      >
        <i
          className="fa fa-fw fa-copy text-info"
        />
        Duplicate
      </button>
      <button
        className="btn btn-default"
        disabled={true}
        title="revert changes to flow [V]"
      >
        <i
          className="fa fa-fw fa-history text-warning"
        />
        Revert
      </button>
      <button
        className="btn btn-default"
        onClick={[Function]}
        title="[d]elete flow"
      >
        <i
          className="fa fa-fw fa-trash text-danger"
        />
        Delete
      </button>
    </div>
    <div
      className="menu-legend"
    >
      Flow Modification
    </div>
  </div>
  <div
    className="menu-group"
  >
    <div
      className="menu-content"
    >
      <button
        className="btn btn-default"
        onClick={[Function]}
        title="download"
      >
        <i
          className="fa fa-fw fa-download"
        />
        Download
      </button>
    </div>
    <div
      className="menu-legend"
    >
      Export
    </div>
  </div>
  <div
    className="menu-group"
  >
    <div
      className="menu-content"
    >
      <button
        className="btn btn-default"
        disabled={true}
        title="[a]ccept intercepted flow"
      >
        <i
          className="fa fa-fw fa-play text-success"
        />
        Resume
      </button>
      <button
        className="btn btn-default"
        disabled={true}
        title="kill intercepted flow [x]"
      >
        <i
          className="fa fa-fw fa-times text-danger"
        />
        Abort
      </button>
    </div>
    <div
      className="menu-legend"
    >
      Interception
    </div>
  </div>
</div>
`;

exports[`FlowMenu Component should render correctly with flow 1`] = `
<div
  className="flow-menu"
>
  <div
    className="menu-group"
  >
    <div
      className="menu-content"
    >
      <button
        className="btn btn-default"
        onClick={[Function]}
        title="[r]eplay flow"
      >
        <i
          className="fa fa-fw fa-repeat text-primary"
        />
        Replay
      </button>
      <button
        className="btn btn-default"
        onClick={[Function]}
        title="[D]uplicate flow"
      >
        <i
          className="fa fa-fw fa-copy text-info"
        />
        Duplicate
      </button>
      <button
        className="btn btn-default"
        disabled={false}
        onClick={[Function]}
        title="revert changes to flow [V]"
      >
        <i
          className="fa fa-fw fa-history text-warning"
        />
        Revert
      </button>
      <button
        className="btn btn-default"
        onClick={[Function]}
        title="[d]elete flow"
      >
        <i
          className="fa fa-fw fa-trash text-danger"
        />
        Delete
      </button>
    </div>
    <div
      className="menu-legend"
    >
      Flow Modification
    </div>
  </div>
  <div
    className="menu-group"
  >
    <div
      className="menu-content"
    >
      <button
        className="btn btn-default"
        onClick={[Function]}
        title="download"
      >
        <i
          className="fa fa-fw fa-download"
        />
        Download
      </button>
    </div>
    <div
      className="menu-legend"
    >
      Export
    </div>
  </div>
  <div
    className="menu-group"
  >
    <div
      className="menu-content"
    >
      <button
        className="btn btn-default"
        disabled={false}
        onClick={[Function]}
        title="[a]ccept intercepted flow"
      >
        <i
          className="fa fa-fw fa-play text-success"
        />
        Resume
      </button>
      <button
        className="btn btn-default"
        disabled={false}
        onClick={[Function]}
        title="kill intercepted flow [x]"
      >
        <i
          className="fa fa-fw fa-times text-danger"
        />
        Abort
      </button>
    </div>
    <div
      className="menu-legend"
    >
      Interception
    </div>
  </div>
</div>
`;

exports[`FlowMenu Component should render correctly without flow 1`] = `<div />`;
